<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/signup_page_logo"
        app:srcCompat="@drawable/loginm" />

    <EditText
        android:id="@+id/username"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/email"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/password"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="TextContrastCheck"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:layout_below="@id/password"
        />


</RelativeLayout>