<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/Attendancelogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/username"
        android:hintTextColor="#00796B"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/email"
        android:hintTextColor="#00796B"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/password"
        android:hintTextColor="#00796B"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/signup"
        android:layout_below="@id/password"/>




</RelativeLayout>