<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/forgotPassword"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/forgotPassword"
        android:gravity="center"
        android:text="@string/enter_your_email_we_ll_send_you_email_to_reset_your_password"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/email"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="35dp"
        android:text="@string/submit"
        android:layout_below="@id/email"/>


</RelativeLayout>